[gd_scene load_steps=16 format=2]

[ext_resource path="res://actors/astromouse/Astromouse.gd" type="Script" id=1]
[ext_resource path="res://actors/astromouse/actions/Actions.gd" type="Script" id=2]
[ext_resource path="res://actors/astromouse/actions/JumpMultiple.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/astromouse/actions/strategies/JumpReflected.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/astromouse/sound_effects/AudioLibrary.gd" type="Script" id=5]
[ext_resource path="res://actors/astromouse/sound_effects/landing.wav" type="AudioStream" id=6]
[ext_resource path="res://actors/astromouse/sound_effects/falling.wav" type="AudioStream" id=7]
[ext_resource path="res://actors/astromouse/sound_effects/jump.wav" type="AudioStream" id=8]
[ext_resource path="res://objects/cheese/pickup.wav" type="AudioStream" id=9]
[ext_resource path="res://meta/achievements/AstromouseAchievement.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/astromouse/sprites/AstromouseCharacter.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.6667, 21.6667 )

[sub_resource type="GDScript" id=2]
script/source = "extends Timer

func start(time_sec = -1):
	$Animator.play(\"invincible\")
	.start(time_sec)
"

[sub_resource type="Animation" id=3]
resource_name = "invincible"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../AstromouseCharacter:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.5, 1.5, 1.5, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 28.5554
height = 42.0004

[node name="Astromouse" type="KinematicBody2D" groups=[
"player",
]]
z_index = 1
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( 10.6667, 0 )
shape = SubResource( 1 )

[node name="Invincible" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
script = SubResource( 2 )

[node name="Animator" type="AnimationPlayer" parent="Invincible"]
autoplay = "invincible"
anims/invincible = SubResource( 3 )

[node name="Actions" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Jump" parent="Actions" instance=ExtResource( 3 )]
height = 325.0
strategy = ExtResource( 4 )

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2( 12.4444, -8.22223 )
rotation = 1.57079
shape = SubResource( 4 )

[node name="SFX" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Damage" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 6 )

[node name="Finished" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 7 )

[node name="Jump" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 8 )

[node name="Pickup" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 9 )

[node name="AstromouseAchievement" parent="." instance=ExtResource( 10 )]

[node name="AstromouseCharacter" parent="." instance=ExtResource( 11 )]
position = Vector2( -0.888885, 24.8889 )

[connection signal="collided" from="." to="." method="_on_collided"]
[connection signal="timeout" from="Invincible" to="Invincible/Animator" method="stop" binds= [ true ]]
[connection signal="executed" from="Actions/Jump" to="." method="_on_Jump_executed"]
[connection signal="area_entered" from="PickupArea" to="AstromouseAchievement" method="_on_PickupArea_area_entered"]
